Updated UI/Functinality fixed